<resources>
    <string name="app_name">ToDoListApp</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_list">CreateListActivity</string>
    <string name="compras">Compras</string>
    <string name="personal">Personal</string>
    <string name="trabajo">Trabajo</string>
    <string name="hogar">Hogar</string>
    <string name="fitness">Fitness</string>
    <string name="todo">Todo</string>
</resources>
