<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.CreateListActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="110sp">
        <TextView
            android:id="@+id/list_textView_addList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nueva Lista"
            android:textStyle="bold"
            android:textSize="30sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp">

        <TextView
            android:id="@+id/list_textView_nameList"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nombre de la lista"
            android:textSize="20sp"

            android:layout_marginLeft="20sp"/>
    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="15">

        <EditText
            android:id="@+id/list_edtiText_nameList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="Nombre de la lista"
            android:ems="15"/>

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_gravity="top"
            android:id="@+id/list_textView_color"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:text="Color de fondo"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="20sp"/>

        <Spinner
            android:id="@+id/spinner_color"
            android:layout_width="156dp"
            android:layout_height="match_parent"
            android:layout_marginStart="70dp" />
    </LinearLayout>

    <TextView
        android:layout_gravity="top"
        android:id="@+id/logo_textView"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:text="Icono de lista"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginStart="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="-5sp"
            android:textColor="#FD070505"
            android:text="@string/todo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:text="@string/fitness"
            android:textColor="#FD070505"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:text="@string/hogar"
            android:textColor="#FD070505"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:text="@string/trabajo"
            android:textColor="#FD070505"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:text="@string/personal"
            android:textColor="#FD070505"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:text="@string/compras"
            android:textColor="#FD070505"/>

    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/rg_iconos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20sp"
        android:layout_marginTop="5sp">

        <RadioGroup
            android:id="@+id/icons_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/all_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:drawableStart="@drawable/ic_all" />

            <RadioButton
                android:id="@+id/exercise_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:drawableStart="@drawable/ic_fitness"/>

            <RadioButton
                android:id="@+id/home_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:drawableStart="@drawable/ic_home"/>

            <RadioButton
                android:id="@+id/work_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:drawableStart="@drawable/ic_work"/>

            <RadioButton
                android:id="@+id/personal_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:drawableStart="@drawable/ic_personal"/>

            <RadioButton
                android:id="@+id/shopping_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:drawableStart="@drawable/ic_shopping"/>
        </RadioGroup>

    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200sp">

        <Button
            android:id="@+id/list_button_crearLista"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@color/ButtonColor"
            android:text="Crear" />

        <Button
            android:id="@+id/list_button_cancelarLista"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:backgroundTint="@color/CancelButton"
            android:text="Cancelar" />


    </LinearLayout>

</LinearLayout>